SERVER-5536: 2.0/2.1 sharded mapReduce compatibility